edit for style